# rsomics-fcluster

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  cluster.rs  lib.rs  linkage.rs
tests/: compat.rs
tests/golden/: small_distance_t1.5.expected  small_inconsistent_t0.8_d3.expected  small_linkage.tsv  small_maxclust_0.expected  small_maxclust_6.expected
