[package]
name = "rsomics-fcluster"
version = "0.1.2"
description = "Form flat clusters from a hierarchical linkage matrix — scipy.cluster.hierarchy.fcluster (distance / maxclust / inconsistent / monocrit), integer-exact"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-fcluster"
authors = ["Zane Leong <efd@live.com>"]

[[bin]]
name = "rsomics-fcluster"
path = "src/main.rs"

[lib]
name = "rsomics_fcluster"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "bench"
harness = false
